# multi-agent-coverage-planner

./: README.md  pyproject.toml
notebooks/: analysis.ipynb  notebook.ipynb
results/: sweeps.db
src/coverage_planner/: __init__.py  env.py  metrics.py
src/coverage_planner/experiments/: config.py  plot_sweep.py  plotting.py  run_single.py  run_sweep.py  storage.py
src/coverage_planner/policies/: centralized.py  greedy.py  sequential.py  tools.py
src/idea_sim/: __init__.py  env.py  metrics.py  objective.py
src/idea_sim/experiments/: plot_sweep.py  run_single.py  run_sweep.py
src/idea_sim/policies/: centralized.py  sequential.py  tools.py
tests/: test_plotting.py  test_policies.py
