[project]
name = "idea-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Josh McConkie", email = "bjmcconk@byu.edu" }
]
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pip>=26.0.1",
    "pytest>=9.0.3",
]

[project.scripts]
idea-sim = "idea_sim:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
