[project]
name = "coverage-planner"
version = "0.1.0"
description = "Multi-agent rolling-horizon coverage path-planning benchmark."
readme = "README.md"
authors = [
    { name = "Josh McConkie", email = "bjmcconk@byu.edu" }
]
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pip>=26.0.1",
    "pytest>=9.0.3",
    "tqdm>=4.67.3",
]

[project.scripts]
coverage-planner = "coverage_planner:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
